--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": ">=18.18 <23"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev && dotenv -e .env.local -- tsx watch worker/index.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
