--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@prisma/client": "^6.14.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.55.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "bullmq": "^5.57.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
