--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-sqs": "^3.873.0",
     "@ffprobe-installer/ffprobe": "^2.1.2",
     "@prisma/client": "^6.14.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.55.0",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@types/aws-lambda": "^8.10.152",
     "bullmq": "^5.57.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -54,6 +56,7 @@
     "@types/react-dom": "^19.1.7",
     "autoprefixer": "^10.4.21",
     "dotenv-cli": "^10.0.0",
+    "esbuild": "^0.25.9",
     "eslint": "^9.33.0",
     "eslint-config-next": "^15.4.6",
     "husky": "^9.1.7",
